@@ -1,5 +1,10 @@
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* MonoDevelop.Projects/Solution.cs: Clean startup item references when
+	  an item is removed.
+
+2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* MonoDevelop.Projects.addin.xml: Bump MD version.
 
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
